# psxsdk

./: .gitignore  CMakeLists.txt  README.md  package.cmake
libs/: CMakeLists.txt
libs/libpsx/: CMakeLists.txt
libs/libpsx/src/: psxsdk.c
toolchain/: CMakeLists.txt  Dockerfile  psx.ld
toolchain/cmake/: cmake_release.crt  install_cmake.sh
toolchain/cmake/Modules/Platform/: psx.cmake
toolchain/patches/: llvm_mips1.patch
toolchain/patches/m4/: libio_removal.patch
tools/: CMakeLists.txt  mod4psx.c
